Functional changes: 1. Change font size in inputs to 16px to prevent zoom on Safari 2. Add polyfill for formData for Safari compatibility reasons 3. Phone keyboard on phone input on mobile 4. Scroll to form's top on step changes

--- a/src/scss/components/RegisterForm/RegisterForm.scss
+++ b/src/scss/components/RegisterForm/RegisterForm.scss
@@ -145,7 +145,7 @@
   height: 50px;
   width: 100%;
   padding-left: calc(20px + 29px);
-  font-size: 14px;
+  font-size: 16px;
   line-height: 21px;
   background-repeat: no-repeat;
   background-position: 15px 15px;
@@ -207,7 +207,7 @@
   width: 100%;
   padding-top: 15px;
   padding-left: 17px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 21px;
   border-radius: 5px;
   box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(127, 177, 223, 0.1);
